salesforce-main/src/main/default/objects/Application_History__c/Application_History__c.object-meta.xml
<CustomObject>
    <label>Application History</label>
    <nameField>
        <displayFormat>AH-{0000000000}</displayFormat>
        <label>Application History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>