salesforce-main/src/main/default/objects/Application_History__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <externalId>true</externalId>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>