salesforce-main/src/main/default/objects/Application_History__c/fields/Company_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Address_Line_2__c</fullName>
    <label>Company Address Line 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>