salesforce-main/src/main/default/objects/Application_History__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <label>Company City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>