salesforce-main/src/main/default/objects/Application_History__c/fields/Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Country</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Company Country</relationshipLabel>
    <relationshipName>Company_Country</relationshipName>
    <type>Lookup</type>
</CustomField>