salesforce-main/src/main/default/objects/Application_History__c/fields/Company_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Postal_Code__c</fullName>
    <label>Company Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>