salesforce-main/src/main/default/objects/Application_History__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>A detailed overview of the employee&apos;s job responsibilities and duties as provides during the application process.</description>
    <label>Job Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>