salesforce-main/src/main/default/objects/Application_History__c/fields/Job_Started_On__c.field-meta.xml
<CustomField>
    <fullName>Job_Started_On__c</fullName>
    <description>The date when the employee officially started their current job role.</description>
    <label>Job Started On</label>
    <type>Date</type>
</CustomField>