salesforce-main/src/main/default/objects/Application_History__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>The title of the job role assigned to the employee as provided during the application process.</description>
    <label>Job Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>