salesforce-main/src/main/default/objects/Application_History__c/fields/Line_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Email__c</fullName>
    <description>Email of Line Manager specified in an Application request</description>
    <label>Line Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>