salesforce-main/src/main/default/objects/Application_History__c/fields/Line_Manager_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_First_Name__c</fullName>
    <description>The First Name of a Line Manager specified in a Application request</description>
    <label>Line Manager First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>