salesforce-main/src/main/default/objects/Application_History__c/fields/Line_Manager_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Job_Title__c</fullName>
    <description>Job Title of Line Manager specified in an Application request</description>
    <label>Line Manager Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>