salesforce-main/src/main/default/objects/Application_History__c/fields/Line_Manager_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Last_Name__c</fullName>
    <description>Last Name of Line Manager specified in an Application request</description>
    <label>Line Manager Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>