salesforce-main/src/main/default/objects/Application_History__c/fields/Line_Manager_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Telephone__c</fullName>
    <description>Telephone number of Line Manager specified in an Application request</description>
    <label>Line Manager Telephone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>