salesforce-main/src/main/default/objects/Application_History__c/fields/Safety_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Safety_Knowledge__c</fullName>
    <description>A picklist indicating whether the employee has knowledge of safety queries related to their job role.</description>
    <label>Safety Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>