salesforce-main/src/main/default/objects/Application_History__c/fields/Sponsoring_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sponsoring_Organization__c</fullName>
    <description>Organization that sponsors the student.</description>
    <label>Sponsoring Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>