salesforce-main/src/main/default/objects/Application_History__c/fields/Weekly_Contracted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Contracted_Hours__c</fullName>
    <description>The total number of hours the employee is contracted to work on a weekly basis.</description>
    <label>Weekly Contracted Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>